HelloUltraviolet/Fixtures/RejectedSource/Patterns/TupleRecordPatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the TupleRecordPatternsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2731", "diag.17.TupleRecordPatterns")
